--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Fontss -->
     <style>
@@ -20,7 +21,7 @@
     <!-- Nav -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Ws</a>
+        <p class="navbar-brand" href="https://www.instagram.com/whyuu05__?igsh=djc0aWR4MnpvMjc4">Me</p>
         <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -64,15 +65,15 @@
     <section id="about">
       <div class="container text-center">
         <div class="row align-items-end mb-5">
-          <div class="col">
+          <div class="col" data-aos="fade-zoom-in" data-aos-duration="4000" data-aos-offset="500" data-aos-duration="7000">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="flip-up" data-aos-duration="4000" data-aos-offset="500" data-aos-duration="7000">
             <img src="./img/who.svg" alt="who am i" />
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-up-right" data-aos-duration="3000" data-aos-offset="300">
             <p>Haii👋, Saya Wahyu, seorang mahasiswa Semester 1 yang sedang mempelajari Web development.</p>
             <p>Saya suka mempelajari teknologi baru,saat ini saya sedang mempelajari basic pengembangan Web dan juga Mempelajari Cyber Security Menggunakan System Operasi KALI - LINUX 🚀</p>
           </div>
@@ -91,30 +92,37 @@
     <!-- Prjects -->
     <section id="my-projects">
       <div class="container">
+        <!-- slide 1 -->
         <div class="row text-center">
-          <div class="col">
+          <div class="col" data-aos="fade-zoom-in-down" data-aos-duration="4000" data-aos-offset="400" data-aos-duration="7000">
             <h2>My Projects</h2>
           </div>
         </div>
+
+        <!-- 2 -->
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="fade-left" data-aos-easing="ease-in-back" data-aos-delay="400" data-aos-offset="400">
               <img src="./img/kedai.png" class="card-img-top" alt="HarmonyCoffee" />
               <div class="card-body">
                 <p class="card-text">Nikmati secangkir kopi yang sempurna dengan Harmony Coffee.</p>
               </div>
             </div>
           </div>
+
+          <!-- 3 -->
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="600" data-aos-offset="500">
               <img src="./img/webb.png" class="card-img-top" alt="Web Wahyu" />
               <div class="card-body">
                 <p class="card-text">Setiap hari adalah kesempatan untuk menjadi versi terbaik dari diri kita. Mari kita jalani hari dengan semangat dan inspirasi!</p>
               </div>
             </div>
           </div>
+
+          <!-- 4 -->
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="fade-right" data-aos-easing="ease-in-back" data-aos-delay="600" data-aos-offset="500">
               <img src="./img/webbs.png" class="card-img-top" alt="Web Wahyu Botstrap" />
               <div class="card-body">
                 <p class="card-text">Bergabunglah dengan saya dalam perjalanan mengejar ilmu dan keterampilan di dunia teknologi.</p>
@@ -142,7 +150,6 @@
           </div>
         </div>
         <form action="https://formspree.io/f/mgvovepo" method="POST">
-         
           <div class="row justify-content-center">
             <div class="col-md-8">
               <form>
@@ -202,6 +209,15 @@
     </footer>
     <!-- end -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
+
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({});
+    </script>
+    <!-- end animation -->
+
+    <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
